--- a/src/style/Main.scss
+++ b/src/style/Main.scss
@@ -15,7 +15,12 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900');
+
+
 @import "animation";
+@import "header";
+@import "AboutPage";
+
 
 $green: #70FF00;
 
@@ -24,6 +29,18 @@ $green: #70FF00;
 
 .c_g{
   color:$green;
+}
+
+::-webkit-scrollbar{
+  display: none;
+  width: 8px;
+}
+::-webkit-scrollbar-track{
+  background: #131313;
+}
+::-webkit-scrollbar-thumb{
+  background-color: $green;
+  border-radius: 15px;
 }
 
 body{
@@ -67,59 +84,10 @@ body{
 
 
 
-header{
-  position: absolute;
-  color: white;
-  z-index: 5;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 600;
-  letter-spacing: 0.05em;
-  height: 10vh;
-  width: 100vw;
-  position: fixed;
-  animation: up-swipe-animation 1s ease-in-out forwards;
-  animation-timing-function: cubic-bezier(.03,.83,.87,.99);
-  nav{
-    display: flex;
-    align-items: center;
-    height: 100%;
-
-    .logo-container{
-      margin-left: 100px;
-      font-size: 36px;
-      letter-spacing: 0.05em;
-      display: inline-flex;
-      gap: 0px;
-      transition: gap 0.3s ease-in-out;
-      &:hover{
-        gap: 15px
-      }
-    }
-    .main-navigation-container{
-      display: flex;
-      margin-left: auto;
-      margin-right: 100px;
-      gap: 50px;
-      font-weight: 600;
-      font-size: 24px;
-      letter-spacing: 0.05em;
-      &-hover{
-        gap: 0px;
-        display: flex;
-        transition: gap 0.3s ease-in-out;
-      }
-      &-hover:hover{
-        gap: 15px;
-      }
-    }
-  }
-}
 
 main{
   position: relative;
   top: 10vh;
-
   .h1{
     font-family: 'Montserrat';
     font-style: normal;
@@ -305,7 +273,7 @@ main{
         border: 0px solid #FFFFFF;
         height: 0px;
         margin: 10px;
-        animation: line-wipe-down-image 3s ease-in-out forwards ;
+        animation: line-wipe-down-image 3s ease-in-out forwards 4s;
         animation-timing-function: cubic-bezier(.2,.8,.61,.97);
       }
     }
