--- a/src/style/LoaderAnimation.scss
+++ b/src/style/LoaderAnimation.scss
@@ -1,4 +1,23 @@
-@import "Main";
+@font-face {
+  font-family: WILDWORLD;
+  src: url("../Assets/fonts/WILDWORLD-FONT.woff2") format("woff2"),
+  url("../Assets/fonts/WILDWORLD-FONT.woff") format("woff");
+}
+@font-face {
+  font-family: Projekt Blackbird;
+  src: url("../Assets/fonts/projekt_blackbird_v2-webfont.woff2") format("woff2"),
+  url("../Assets/fonts/projekt_blackbird_v2-webfont.woff") format("woff");
+}
+@font-face {
+  font-family: Nafta;
+  src: url("../Assets/fonts/NaftaLight-Regular.woff2") format("woff2"),
+  url("../Assets/fonts/NaftaLight-Regular.woff") format("woff");
+}
+
+
+$green: #70FF00;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900');
 
 
 
